- handle no vertical scrollbar is needed in drum editor
- fixed notes not beaming in chords of some imported midis
- fixed note subtails disappearing in some imported midis
- fixed amount of measures too short in some imported midis
- improved grouping of beamed notes in common non-4/4 time signatures
- improved grouping of beamed triplets
- converted keys image from gif to png

 1.1b5
- note beams
- Keys now appear in keyboard editor too
- support for displaying chords in score
- improved document icon
- fixed score editor crash with very high or very low notes
- refactored note moving code
- improved editor vertical scrollbars (thumb could hardly be grabbed when it was at the bottom)
- fixed score editor crashes
- forbid changing tempo and other basic settings during playback
- fixed set-up menus incorrectly appearing when clicking on elements in track header
- fixed display of silences longer than 1 measure
- improved performance of non-linear score display
- fixed triplet sign appearing at wrong Y location
- fixed bugs in "rearrange notes"
- fixed crash in controller editor
- triplets no more group across measures
- fixed bugs when using variable time signatures
 
 1.1b4
- Fixed crash in tab exporter
- Now checks for file format version when opening .aria file
- Shifting frets in guitar editor will now change string as needed
- Triplets now consider silences.
- Added silences
- Improved graphical appearance of scores
- Accidentals are now displayed correctly in linear score view
- Don't show scrollbar in score editor if track is wide enough to show everything
- Notes outside score range are displayed with little lines to make their level clear
- Key is now saved and loaded to/from .aria files
- Read key from midi files
- Fixed OpenGL handling to comply with wxWidgets docs, improving linux support
- Fixed undoing in tempo controller editor
- Improved build system for linux by adding library search paths with-rpath