@@ -166,6 +166,7 @@ int findNotePitch(int note_7, int sharpness)
 
 ScoreMidiConverter::ScoreMidiConverter()
 {
+    INIT_LEAK_CHECK();
 	for(int n=0; n<7; n++) scoreNotesSharpness[n] = NATURAL;
 	
     going_in_sharps = false;
